--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - ncbi-genome-download
   # - mason=2.0.9 # we compile a more recent version to avoid some crashes
   - snakemake-minimal=9
+  - snakemake-executor-plugin-slurm
   - python=3.13
   - pysam=0.23
   - dnaio
