--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,8 @@ channels:
 dependencies:
   - ncbi-genome-download
   # - mason=2.0.9 # we compile a more recent version to avoid some crashes
-  - snakemake-minimal=9
+    # More recent snakemake versions cannot be used with SLURM due to https://github.com/snakemake/snakemake/issues/3853
+  - snakemake-minimal=9.13.7
   - snakemake-executor-plugin-slurm
   - python=3.13
   - pysam=0.23
