--- a/mcs/strategies.yaml
+++ b/mcs/strategies.yaml
@@ -34,10 +34,10 @@ versions:
     name: "strobealign-MCS"  # no need to specify --mcs=always as it is the default
     color: "black"
 
-#  - commit: "caa3745f"
-#    name: "strobealign randstrobes"
-#    arguments: "--mcs=off"
-#    color: "tab:green"
+  - commit: "caa3745f"
+    name: "strobealign randstrobes"
+    arguments: "--mcs=off"
+    color: "tab:green"
 
 #  - commit: "caa3745f"
 #    name: "strobealign-MCS-R"
