--- a/environment.yml
+++ b/environment.yml
@@ -5,8 +5,10 @@ channels:
 dependencies:
   - ncbi-genome-download
   # - mason=2.0.9 # we compile a more recent version to avoid some crashes
-    # More recent snakemake versions cannot be used with SLURM due to https://github.com/snakemake/snakemake/issues/3853
-  - snakemake-minimal=9.13.7
+    # Snakemake >=9.10.0 sometimes runs too many jobs in parallel, skewing our
+    # runtime measurements (see
+    # https://github.com/snakemake/snakemake/issues/3913)
+  - snakemake-minimal=9.9.0
   - snakemake-executor-plugin-slurm
   - python=3.13
   - pysam=0.23
