--- a/simx/Snakefile
+++ b/simx/Snakefile
@@ -11,13 +11,12 @@ for version in config.get("versions", []):
     key = version["commit"]
     if arg := version.get("arguments", ""):
         key += "-" + arg.replace(" ", "").replace("-", "").replace("=", "")
-    extra = "-rs" if version.get("rust") else ""
     VERSIONS[key] = {
         "commit": version["commit"],
         "arguments": f" {arg}" if arg else "",
         "name": version["name"],
         "color": version["color"],
-        "binary": f"bin/strobealign{extra}/{version['commit']}",
+        "binary": f"bin/strobealign/{version['commit']}",
     }
 
 PROGRAMS = expand("strobealign-{key}", key=VERSIONS.keys())
@@ -254,22 +253,8 @@ rule compile_strobealign:
     threads: 99
     params: repo=f" -r {config['repository']}" if config.get("repository") else ""
     shell:
-        "python -m saeval.compile{params.repo} -o {output} {wildcards.commit}"
+        "RUSTFLAGS='-C target-cpu=x86-64-v2' python -m saeval.compile{params.repo} -o {output} {wildcards.commit}"
 
-rule compile_strobealign_rs:
-    output: "bin/strobealign-rs/{commit}"
-    threads: 8
-    shell:
-        """
-        wget https://github.com/marcelm/rstrobes/archive/{wildcards.commit}.zip
-        unzip -d rstrobes-{wildcards.commit} {wildcards.commit}.zip
-        rm {wildcards.commit}.zip
-        cd rstrobes-{wildcards.commit}/*
-        RUSTFLAGS='-C target-cpu=x86-64-v2' cargo build --release
-        mv target/release/rstrobes ../../{output}
-        cd ../..
-        rm -rf rstrobes-{wildcards.commit}
-        """
 
 # Map reads with strobealign
 
